--- a/Zaklady/Zaklady.csproj
+++ b/Zaklady/Zaklady.csproj
@@ -50,6 +50,14 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -245,6 +253,10 @@
     <Compile Include="Migrations\201608141919375_RemovingPointsFromBetModel.Designer.cs">
       <DependentUpon>201608141919375_RemovingPointsFromBetModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201608292002027_AddNameToApplicationUser.cs" />
+    <Compile Include="Migrations\201608292002027_AddNameToApplicationUser.Designer.cs">
+      <DependentUpon>201608292002027_AddNameToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -274,6 +286,8 @@
     <Content Include="Content\Images\bottomlogo.png" />
     <Content Include="Content\Images\loading.gif" />
     <Content Include="Content\Images\logo.png" />
+    <Content Include="Content\PagedList.css" />
+    <Content Include="Content\sidebar.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -290,6 +304,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.11.3.min.js" />
+    <Content Include="App_Code\GlyphIcon.cshtml" />
     <None Include="Scripts\jquery-3.1.0.intellisense.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
     <Content Include="Scripts\jquery-3.1.0.js" />
@@ -350,7 +365,7 @@
     <Content Include="Views\FootballMatch\DeleteBetConfirmation.cshtml" />
     <Content Include="Views\Ranking\RankingsIndex.cshtml" />
     <Content Include="Views\FootballMatch\UpcomingEvents.cshtml" />
-    <Content Include="Views\Home\slidertest.cshtml" />
+    <Content Include="Views\Home\Slider.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -412,6 +427,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201608141919375_RemovingPointsFromBetModel.resx">
       <DependentUpon>201608141919375_RemovingPointsFromBetModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201608292002027_AddNameToApplicationUser.resx">
+      <DependentUpon>201608292002027_AddNameToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
