--- a/Zaklady/Zaklady.csproj
+++ b/Zaklady/Zaklady.csproj
@@ -268,6 +268,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\BetViewModel.cs" />
     <Compile Include="ViewModels\FootballMatchViewModel.cs" />
+    <Compile Include="ViewModels\RankingViewModel.cs" />
     <Compile Include="ViewModels\UsersViewModel.cs" />
     <Compile Include="ViewModels\ValidTimeAttribute.cs" />
   </ItemGroup>
@@ -366,6 +367,7 @@
     <Content Include="Views\Ranking\RankingsIndex.cshtml" />
     <Content Include="Views\FootballMatch\UpcomingEvents.cshtml" />
     <Content Include="Views\Home\Slider.cshtml" />
+    <Content Include="Views\Shared\Sidebar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
