--- a/Zaklady/Zaklady.csproj
+++ b/Zaklady/Zaklady.csproj
@@ -257,6 +257,10 @@
     <Compile Include="Migrations\201608292002027_AddNameToApplicationUser.Designer.cs">
       <DependentUpon>201608292002027_AddNameToApplicationUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609031825332_AddingPointsProperty.cs" />
+    <Compile Include="Migrations\201609031825332_AddingPointsProperty.Designer.cs">
+      <DependentUpon>201609031825332_AddingPointsProperty.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -336,8 +340,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
@@ -432,6 +434,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201608292002027_AddNameToApplicationUser.resx">
       <DependentUpon>201608292002027_AddNameToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609031825332_AddingPointsProperty.resx">
+      <DependentUpon>201609031825332_AddingPointsProperty.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
